--- a/documentation/Mod_Template/manifest.json
+++ b/documentation/Mod_Template/manifest.json
@@ -92,6 +92,12 @@
                     "keyboard/letter_1.mp3",
                     "keyboard/letter_2.mp3",
                     "keyboard/letter_3.mp3"
+                    "keyboard/letter_4.mp3"
+                    "keyboard/letter_5.mp3"
+                    "keyboard/letter_6.mp3"
+                    "keyboard/letter_7.mp3"
+                    "keyboard/letter_8.mp3"
+                    "keyboard/letter_9.mp3"
                 ],
                 "TYPING_SPACE":
                 [
